--- a/app/src/main/res/drawable/user_bg_bubble.xml
+++ b/app/src/main/res/drawable/user_bg_bubble.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorAccent" />
-    <corners android:topRightRadius="1dp" android:radius="16dp" />
+    <solid android:color="@color/colorPrimary" />
+    <corners android:topRightRadius="5dp" android:radius="15dp" />
 </shape>
