--- a/app/src/main/res/drawable/user_circle.xml
+++ b/app/src/main/res/drawable/user_circle.xml
@@ -3,12 +3,9 @@
     <item>
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
-
-        <solid android:color="#666666"/>
-
         <size android:width="120dp"
             android:height="120dp"/>
     </shape>
     </item>
-    <item android:drawable="@drawable/logo"></item>
+    <item android:drawable="@drawable/user"></item>
 </layer-list>
