--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -10,24 +10,17 @@
         android:name="com.example.covid2019.fragment.LoginFragment"
         android:label="LoginFragment" >
         <action
-            android:id="@+id/action_loginFragment_to_mainFragment"
-            app:destination="@id/mainFragment" />
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_signupFragment"
+            app:destination="@id/signupFragment" />
     </fragment>
     <fragment
         android:id="@+id/mainFragment"
         android:name="com.example.covid2019.fragment.MainFragment"
         android:label="fragment_main"
-        tools:layout="@layout/fragment_main" >
-        <action
-            android:id="@+id/action_mainFragment_to_exerciseFragment"
-            app:destination="@id/exerciseFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_todoFragment"
-            app:destination="@id/todoFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_tableauFragment"
-            app:destination="@id/tableauFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_main" />
     <fragment
         android:id="@+id/exerciseFragment"
         android:name="com.example.covid2019.fragment.ExerciseFragment"
@@ -42,4 +35,25 @@
         android:id="@+id/tableauFragment"
         android:name="com.example.covid2019.fragment.TableauFragment"
         android:label="TableauFragment" />
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.example.covid2019.fragment.HomeFragment"
+        android:label="HomeFragment" >
+        <action
+            android:id="@+id/action_homeFragment_to_tableauFragment"
+            app:destination="@id/tableauFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_mainFragment"
+            app:destination="@id/mainFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_exerciseFragment"
+            app:destination="@id/exerciseFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_todoFragment"
+            app:destination="@id/todoFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="com.example.covid2019.fragment.SignupFragment"
+        android:label="SignupFragment" />
 </navigation>
